# lab10_2020

./: CMakeLists.txt
include/: main.hpp
scripts/: checks.sh
sources/: DBHashCreator.cpp  logs.cpp  main.cpp
